# aoc-2018

./: README.md
day01/haskell/: Day01.hs  aoc2018.cabal
day01/haskell/.stack-work/ghci/d594b1c1/: cabal_macros.h
day02/: input.txt
day02/haskell/: Day02.hs  aoc2018.cabal
day02/haskell/.stack-work/ghci/39e3e580/: cabal_macros.h
day02/haskell/.stack-work/ghci/431f40f7/: cabal_macros.h
day03/rust/: Cargo.toml
day03/rust/src/: main.rs
day04/rust/: Cargo.toml
day04/rust/src/: main.rs
day05/rust/src/: main.rs
day06/rust/: Cargo.toml
day06/rust/src/: main.rs
haskell/: aoc2018.cabal  stack.yaml
haskell/src/: Main.hs
haskell/src/day01/: Day01.hs  Day01Main.hs
rust/day01/: Cargo.toml
rust/day01/src/: main.rs
