name:                aoc2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/djrollins/aoc2018#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Rollins
maintainer:          daniel@djrollins
copyright:           2018 Daniel Rollins
category:            Coding Challenge
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day01
  hs-source-dirs:      src/day01
  main-is:             Day01Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       mtl
