name:                aoc2018
version:             0.1.0.0
homepage:            https://github.com/djrollins/aoc2018#readme
license:             BSD3
author:              Daniel Rollins
maintainer:          daniel@djrollins
copyright:           2018 Daniel Rollins
category:            Coding Challenge
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  default-language:    Haskell2010
  exposed-modules:     Day01
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       mtl
